--- a/Source/workspace/PARROT/res/values/strings.xml
+++ b/Source/workspace/PARROT/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="changeCategoryNameButton">Kategori Titel</string>
     <string name="copyThisCategoryToOtherProfileButton">Kopier Denne Kategori</string>
     <string name="copyThisCategoryToOtherProfileCategoryButton">Kopier Til Anden Profil Kategori</string>
+    <string name="KlimTest">Her skal stå en lang tekst, som gerne skulle brydes</string>
 </resources>
