--- a/source/workspace/PARROT/res/values/strings.xml
+++ b/source/workspace/PARROT/res/values/strings.xml
@@ -5,15 +5,17 @@
     <string name="app_name">PARROT</string>
     <string name="firstTab">Tale</string>
     <string name="secondTab">Administrer</string>
-	<color name="cell_empty">#FF993311</color>
-	<string name="thirdTab">Indstillinger</string>
-	<string name="fourthTab">Kamera</string>
-	<string name="TakePictureButton">Tag Billed</string>
-	<string name="changecategorycolor">Ændring af baggrunds farve på kategorilisten</string>
-	<string name="changesentencecolor">Ændring af baggrunds farve på sætningsbrættet</string>
-	
-	<!-- Old DigiPecs String Values.  -->
-	
+
+    <color name="cell_empty">#FF993311</color>
+
+    <string name="thirdTab">Indstillinger</string>
+    <string name="fourthTab">Kamera</string>
+    <string name="TakePictureButton">Tag Billed</string>
+    <string name="changecategorycolor">Ændring af baggrunds farve på kategorilisten</string>
+    <string name="changesentencecolor">Ændring af baggrunds farve på sætningsbrættet</string>
+
+    <!-- Old DigiPecs String Values. -->
+
     <string name="admin_app_name">DigiPECS</string>
     <string name="star">Star</string>
     <string name="modifyPicturePreviewText">Preview</string>
@@ -30,7 +32,7 @@
     <string name="createSituationSaveButtonText">Gem</string>
     <string name="createSituationCancelButtonText">Annuler</string>
     <string name="situationsListContextMenuDeleteText">Fjern Situation</string>
-    <string name="situationListOptionMenuDeleteText"/>
+    <string name="situationListOptionMenuDeleteText" />
     <string name="selectActiveSituationOkButtonText">ok</string>
     <string name="electActiveSituationOkButtonText">Fortryd</string>
     <string name="selectSituationSpinnerPromptText">Vælg situation</string>
@@ -47,4 +49,8 @@
     <string name="copyThisCategoryToOtherProfileCategoryButton">Kopier Til Anden Profil Kategori</string>
     <string name="KlimTest">Her skal stå en lang tekst, som gerne skulle brydes</string>
     <string name="picture">standard billede beskrivelse</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_setting">SettingActivity</string>
+
 </resources>
