--- a/source/workspace/PARROT/res/values/strings.xml
+++ b/source/workspace/PARROT/res/values/strings.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    
+    <!-- In SettingsActivity --> 
+    <string name="sentensboardOptions">Sætnings board</string>
+    <string name="pictogramOptions">Pictogram</string>
+    <string name="changecategorycolor">Ændring af baggrunds farve på kategorilisten</string>
+    <string name="changesentencecolor">Ændring af baggrunds farve på sætningsbrættet</string>
+    <string name="PictoSize">Pictogram størrelse:</string>
+    <string name="LargePictogram">Stor</string>
+    <string name="MediumPictogram">Medium</string>
+    <string name="textToPic">Vis text til pictogram:</string>
+    <string name="SentenceboardNo">Antal bokse i sætnings boarded</string>
+    <string name="buttonChangeColorSentence">Ændre</string>
+    <string-array name="SentenceboardNoChoses">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+    </string-array>
+    
+    
+    <!-- In ParrotActivity -->
     <string name="hello">Hello World, PARROTActivity!</string>
     <string name="app_name">PARROT</string>
     <string name="firstTab">Tale</string>
     <string name="secondTab">Administrer</string>
 
     <color name="cell_empty">#FF993311</color>
-
     <string name="thirdTab">Indstillinger</string>
     <string name="fourthTab">Kamera</string>
     <string name="TakePictureButton">Tag Billed</string>
-    <string name="changecategorycolor">Ændring af baggrunds farve på kategorilisten</string>
-    <string name="changesentencecolor">Ændring af baggrunds farve på sætningsbrættet</string>
 
-    <!-- Old DigiPecs String Values. -->
+
+    <!-- Old DigiPecs v1 String Values. -->
 
     <string name="admin_app_name">DigiPECS</string>
     <string name="star">Star</string>
@@ -48,9 +71,9 @@
     <string name="copyThisCategoryToOtherProfileButton">Kopier Denne Kategori</string>
     <string name="copyThisCategoryToOtherProfileCategoryButton">Kopier Til Anden Profil Kategori</string>
     <string name="KlimTest">Her skal stå en lang tekst, som gerne skulle brydes</string>
-    <string name="picture">standard billede beskrivelse</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_setting">SettingActivity</string>
+    <string name="picture">default picture content description</string>
 
 </resources>
