så skulle det hele virke. Man kan også gemme

--- a/source/workspace/PARROT/res/values/strings.xml
+++ b/source/workspace/PARROT/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="textToPic">Vis text til pictogram:</string>
     <string name="SentenceboardNo">Antal bokse i sætnings boarded</string>
     <string name="buttonChangeColorSentence">Ændre farven</string>
+    <string name="buttonSaveChanges">Gem ændringer</string>
     
     
     <!-- In ParrotActivity -->
