Added something good

--- a/source/workspace/PictoAdmin/res/values/strings.xml
+++ b/source/workspace/PictoAdmin/res/values/strings.xml
@@ -17,6 +17,12 @@
         <item>Under kategori</item>
         <item>Farve?</item>
     </string-array>
+    
+    <string-array name="dialog_options">
+        <item>Titel</item>
+        <item>Farve</item>
+        <item>Icon</item>
+    </string-array>
 
     <string name="save_changes">Gem</string>
     <string name="delete">Slet</string>
