--- a/source/workspace/PARROT/res/values/strings.xml
+++ b/source/workspace/PARROT/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="firstTab">Tale</string>
     <string name="secondTab">Administrer</string>
 	<string name="dialog_title">Fejl</string>
-	<string name="dialog_message">Barnets id blev ikke fundet indlæser default profil </string>
+	<string name="dialog_message">Barnets id blev ikke fundet</string>
 	<string name="ok">Ok</string>
 
 
