Small changes to layout

--- a/source/workspace/PictoAdmin/res/values/strings.xml
+++ b/source/workspace/PictoAdmin/res/values/strings.xml
@@ -11,11 +11,11 @@
     <string name="create_new_pictogram">Nyt Pictogram</string>
 
     <string-array name="select_search_field">
-        <item>Tags</item>
+        <item>Alt</item>
+        <item>Tag</item>
         <item>Navn</item>
         <item>Kategori</item>
         <item>Under kategori</item>
-        <item>Farve?</item>
     </string-array>
     
     <string-array name="dialog_options">
@@ -26,7 +26,7 @@
 
     <string name="save_changes">Gem</string>
     <string name="delete">Slet</string>
-    <string name="reset">Reset</string>
+    <string name="reset">Ryd</string>
     <string name="help">Hjælp</string>
     <string name="add_existing_pictogram">Tilføj eksisterende pictogram</string>
     <string name="back">Tilbage</string>
@@ -35,5 +35,7 @@
     <string name="picture">Default picture content description</string>
     <string name="default_error_message">Error Message</string>
     <string name="title_activity_admin_category">AdminCategory</string>
+    <string name="send">Send</string>
+    <string name="search">Søg</string>
 
 </resources>
