--- a/pictoadmin/res/values/strings.xml
+++ b/pictoadmin/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">PictoAdmin</string>
+    <string name="app_name">CAT</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="search_button">Search</string>
@@ -35,6 +35,7 @@
     <string name="picture">Default picture content description</string>
     <string name="default_error_message">Error Message</string>
     <string name="title_activity_admin_category">AdminCategory</string>
+    <string name="title_activity_picto_main">Søg og Send</string>
     <string name="send">Send</string>
     <string name="search">Søg</string>
 
